# invite-bot

./: .env  Cargo.toml
invite-bot/: Cargo.toml
invite-bot/src/: main.rs
orm/: Cargo.toml
orm/migrations/2022-08-07-142940_create_posts/: up.sql
orm/src/: lib.rs  models.rs  schema.rs
src/: db.rs  main.rs
