[package]
name = "invite-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9.2", features = [ "macros", "ctrlc_handler"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
sqlite = "0.27.0"
log = "0.4"
env_logger = "0.9.0"
edit-distance = "2.1.0"
chrono = "0.4.19"